atualizacao sobre atualizacao

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         style="letter-spacing: 4px"
       >
         <a href="#home" class="w3-bar-item w3-button"
-          >Comida Fresca e Carrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrra</a
+          >Comida Fresca e Cartttttttttttttttttttttttttttttttttttttta</a
         >
         <!-- Right-sided navbar links. Hide them on small screens -->
         <div class="w3-right w3-hide-small">
@@ -83,7 +83,7 @@
             nisi ut aliquip ex ea commodo consequat. Duis aute iruredolor in
             reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
             pariatur.We only use
-            <span class="w3-tag w3-light-grey">seasonal</span> ingredients.
+            <span class="w3-tag w3-light-grey">seasonal</span>
           </p>
           <p class="w3-large w3-text-grey w3-hide-medium">
             Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
