--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <a href="#about" class="w3-bar-item w3-button">About</a>
           <a href="#menu" class="w3-bar-item w3-button">Menu</a>
           <a href="#menu" class="w3-bar-item w3-button">SALES</a>
-
+          <a href="#menu" class="w3-bar-item w3-button">ANOTHER SALES</a>
           <a href="#contact" class="w3-bar-item w3-button">Contact</a>
         </div>
       </div>
