--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
         <!-- Right-sided navbar links. Hide them on small screens -->
         <div class="w3-right w3-hide-small">
           <a href="#about" class="w3-bar-item w3-button">About</a>
-
+          <a href="#menu" class="w3-bar-item w3-button">Menu</a>
+          <a href="#menu" class="w3-bar-item w3-button">Sales</a>
           <a href="#contact" class="w3-bar-item w3-button">Contact</a>
         </div>
       </div>
