--- a/index.html
+++ b/index.html
@@ -27,10 +27,14 @@
         class="w3-bar w3-white w3-padding w3-card"
         style="letter-spacing: 4px"
       >
-        <a href="#home" class="w3-bar-item w3-button">Comida Fresca e Cara</a>
+        <a href="#home" class="w3-bar-item w3-button"
+          >Comida Fresca e Cartttttttttttttttttttttttttttttttttttttta</a
+        >
         <!-- Right-sided navbar links. Hide them on small screens -->
         <div class="w3-right w3-hide-small">
           <a href="#about" class="w3-bar-item w3-button">About</a>
+          <a href="#menu" class="w3-bar-item w3-button">Menu</a>
+          <a href="#menu" class="w3-bar-item w3-button">Sales</a>
           <a href="#contact" class="w3-bar-item w3-button">Contact</a>
         </div>
       </div>
