--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         style="letter-spacing: 4px"
       >
         <a href="#home" class="w3-bar-item w3-button"
-          >Comida Fresca DDDDDDDDDDDDD</a
+          >Comida Fresca DDDDDDDDDDDDD ddd</a
         >
         <!-- Right-sided navbar links. Hide them on small screens -->
         <div class="w3-right w3-hide-small">
