--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         class="w3-bar w3-white w3-padding w3-card"
         style="letter-spacing: 4px"
       >
-        <a href="#home" class="w3-bar-item w3-button">Comida</a>
+        <a href="#home" class="w3-bar-item w3-button">Comidaaaaaaaaaaaaaa</a>
         <!-- Right-sided navbar links. Hide them on small screens -->
         <div class="w3-right w3-hide-small">
           <a href="#about" class="w3-bar-item w3-button">About</a>
